crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@156.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(null,null) @> nummultirange(numrange(1,2));"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    AExpr@7..56
      FuncCall@7..25
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..20
          NullP@16..20 "null"
        Ascii44@20..21 ","
        AConst@21..25
          NullP@21..25 "null"
      Ascii41@25..26 ")"
      Whitespace@26..27 " "
      Op@27..29 "@>"
      Whitespace@29..30 " "
      FuncCall@30..56
        Ident@30..43 "nummultirange"
        Ascii40@43..44 "("
        FuncCall@44..56
          Ident@44..52 "numrange"
          Ascii40@52..53 "("
          AConst@53..54
            Iconst@53..54 "1"
          Ascii44@54..55 ","
          AConst@55..56
            Iconst@55..56 "2"
  Ascii41@56..57 ")"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

