crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@157.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(null,null) @> nummultirange(numrange(null,2));"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..59
    AExpr@7..59
      FuncCall@7..25
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..20
          NullP@16..20 "null"
        Ascii44@20..21 ","
        AConst@21..25
          NullP@21..25 "null"
      Ascii41@25..26 ")"
      Whitespace@26..27 " "
      Op@27..29 "@>"
      Whitespace@29..30 " "
      FuncCall@30..59
        Ident@30..43 "nummultirange"
        Ascii40@43..44 "("
        FuncCall@44..59
          Ident@44..52 "numrange"
          Ascii40@52..53 "("
          AConst@53..57
            NullP@53..57 "null"
          Ascii44@57..58 ","
          AConst@58..59
            Iconst@58..59 "2"
  Ascii41@59..60 ")"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

