crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@160.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(null,5) @> nummultirange(numrange(null,8));"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    AExpr@7..56
      FuncCall@7..22
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..20
          NullP@16..20 "null"
        Ascii44@20..21 ","
        AConst@21..22
          Iconst@21..22 "5"
      Ascii41@22..23 ")"
      Whitespace@23..24 " "
      Op@24..26 "@>"
      Whitespace@26..27 " "
      FuncCall@27..56
        Ident@27..40 "nummultirange"
        Ascii40@40..41 "("
        FuncCall@41..56
          Ident@41..49 "numrange"
          Ascii40@49..50 "("
          AConst@50..54
            NullP@50..54 "null"
          Ascii44@54..55 ","
          AConst@55..56
            Iconst@55..56 "8"
  Ascii41@56..57 ")"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

