crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@162.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(5,null) @> nummultirange(numrange(3,null));"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    AExpr@7..56
      FuncCall@7..22
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..17
          Iconst@16..17 "5"
        Ascii44@17..18 ","
        AConst@18..22
          NullP@18..22 "null"
      Ascii41@22..23 ")"
      Whitespace@23..24 " "
      Op@24..26 "@>"
      Whitespace@26..27 " "
      FuncCall@27..56
        Ident@27..40 "nummultirange"
        Ascii40@40..41 "("
        FuncCall@41..56
          Ident@41..49 "numrange"
          Ascii40@49..50 "("
          AConst@50..51
            Iconst@50..51 "3"
          Ascii44@51..52 ","
          AConst@52..56
            NullP@52..56 "null"
  Ascii41@56..57 ")"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

